2012-11-12  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* aclocal.m4: Regenerate.
	* configure: Ditto.
	* autogen.sh: New script.
	* configure.in: Revamp for new configury.
	* Makefile.in: Revamp for new configury.  Rename ALL_* to just *.
	Always use "VERBOSE" setting. 
	(MINGW_CXX): Don't include CFLAGS in definition.
	(all): Define target first, before everything else so that it is the
	default.
	(ps.exe): Don't add useless -lcygwin.
	(ldh.exe): For consistency, add to existing MINGW_LDFLAGS rather than
	redefining them.
	(cygcheck.exe): Always include -lz for MINGW_LDFLAGS.  Don't try to
	figure out where to find it.
	(dumper.exe): Simplify check.  Assume libraries are installed rather
	than trying to retrieve from source tree.
	(install): Just use /bin/mkdir to create directories.
	(Makefile): Regenerate when standard dependencies change.
	* dump_setup.cc: Always include zlib.h.  Remove accommodations for it
	possibly not existing.
	* parse_pe.cc: Add define which allows building with installed
	binutils package.
	* dumper.cc: Ditto.

2012-11-09  Corinna Vinschen <corinna@vinschen.de>

	* path.cc (vcygpath): Handle cygdrive prefix.

2012-11-07  Corinna Vinschen <corinna@vinschen.de>

	* Makefile.in ($(MINGW_BINS)): Drop -B$(mingw_build)/ from build
	expression.

2012-11-05  Corinna Vinschen <corinna@vinschen.de>

	* Makefile.in (MINGW_CXX): Attach $(CFLAGS) to allow providing
	build option tweaks to mingw compiler as well.

2012-10-24  Corinna Vinschen <corinna@vinschen.de>

	* configure.in: Add AC_NO_EXECUTABLES,
	* configure: Regenerate.

2012-10-24  Kai Tietz  <ktietz70@googlemail.com>
	    Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
	    Corinna Vinschen <corinna@vinschen.de>

	* configure.in: Add check for MINGW_CXX.  Remove libiconv check.
	* configure: Regenerate.
	* Makefile.in: Remove references to mingw and w32api directories.
	Use MINGW_CXX instead of mingw script to build MINGW_BINS.
	Check for libiconv with $CC --print-file-name.