@@ -1,6 +1,6 @@
 /* bloda.cc
 
-   Copyright 2007, 2008, 2011, 2012 Red Hat, Inc.
+   Copyright 2007, 2012 Red Hat, Inc.
 
    This file is part of Cygwin.
 
